--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -3,28 +3,12 @@
 @tailwind utilities;
 
 @layer components {
-  h1 {
-    font-size: clamp(theme('fontSize.4xl'), 8vw, theme('fontSize.7xl'));
-  }
-
   h2 {
-    font-size: clamp(theme('fontSize.3xl'), 5vw, theme('fontSize.6xl'));
+    font-size: clamp(theme('fontSize.3xl'), 5vw, theme('fontSize.5xl'));
   }
 
-  h3 {
-    font-size: clamp(theme('fontSize.2xl'), 5vw, theme('fontSize.3xl'));
-  }
-
-  h4 {
-    font-size: clamp(theme('fontSize.xl'), 5vw, theme('fontSize.2xl'));
-  }
-
-  h5 {
-    font-size: theme('fontSize.xl');
-  }
-
-  h6 {
-    font-size: theme('fontSize.base');
+  tr:hover td {
+    background-color: theme('colors.bg-gray-light');
+    cursor: pointer;
   }
 }
-
