--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,7 +2,7 @@
 
 :root {
   --primary-bg: #2a303c;
-  --primary-color: rgba(255, 255, 255, 0.87);
+  --primary-color: #ffffffde;
 
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
