styles: fix th static and layout main

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -54,4 +54,8 @@
   ::-webkit-scrollbar-track {
     background-color: var(--primary-bg);
   }
+
+  th {
+    position: relative !important;
+  }
 }
